<layout>

    <data>

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        tools:context="com.android.consumerapp.ubi.LeadConfirmationDialogFragment">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lead_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="9dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/successfully_loggedin"
            android:textColor="#de000000"
            android:textSize="20sp" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/lead_img"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/lead_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/success" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/lead_img"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:onClick="@{clickHandler::onClick}"
            android:text="@string/ok"
            android:textColor="#009688" />

    </RelativeLayout>
</layout>
